fix: add z-index to the close button to prevent its overlapping by the content (#1618)

--- a/src/sweetalert2.scss
+++ b/src/sweetalert2.scss
@@ -420,6 +420,7 @@ body {
 
 .swal2-close {
   position: $swal2-close-button-position;
+  z-index: 2; /* 1617 */
   top: $swal2-close-button-gap;
   right: $swal2-close-button-gap;
   justify-content: center;
